--- a/css/styles.css
+++ b/css/styles.css
@@ -293,16 +293,47 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-}
-.info-soc-icon {
-  /*outline: 2px solid black;*/
   fill: #afb1b8;
 }
+/*.info-soc-icon {
+  outline: 2px solid black;
+} */
 .info-soc-link:hover,
 .info-soc-link:focus {
   fill: var(--main-accent-color);
   background-color: var(--accent-color);
 }
+/* --------------CLIENTS ------------*/
+.clients {
+  background: #f5f5f5;
+  padding: 186px 0 94px 0;
+}
+
+.clients-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.7;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--main-text-color);
+  margin-bottom: 50px;
+}
+.clients-list {
+  display: flex;
+  justify-content: space-between;
+}
+.clients-item {
+  width: 170px;
+  background: #ffffff;
+}
+
+.clients-soc {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  padding-bottom: 30px;
+}
+
 /* --------------FOUTER ------------*/
 
 .footer {
