--- a/css/styles.css
+++ b/css/styles.css
@@ -306,7 +306,7 @@ body {
 }
 /* --------------CLIENTS ------------*/
 .clients {
-  background: #f5f5f5;
+  background: #f5f5f5; /*#f5f5f5;*/
   padding: 186px 0 94px 0;
 }
 
@@ -327,24 +327,21 @@ body {
 .clients-item {
   border: 1px solid #afb1b8;
   border-radius: 4px;
-  background: #ffffff;
+  background: #f5f5f5; /*#f5f5f5;*/
 }
 .clients-link {
   width: 170px;
   height: 92px;
 
-  /*background-color: red;*/
   display: flex;
   align-items: center;
   justify-content: center;
   fill: #afb1b8;
 }
-/*.info-soc-icon {
-  outline: 2px solid black;
-} */
+
 .clients-link:hover,
 .clients-link:focus {
-  fill: var(--main-accent-color);
+  fill: var(--accent-color);
 }
 
 /* --------------FOUTER ------------*/
