Add link in portfolio

--- a/css/styles.css
+++ b/css/styles.css
@@ -171,6 +171,9 @@ body {
   margin: 0 auto;
   width: 216px;
   height: 50px;
+
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
 }
 .slogan-btn:hover {
   /*background: #b808fa;*/
@@ -517,6 +520,14 @@ body {
   border-left: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
+}
+.product-link:hover,
+.product-link:focus {
+  
+  display: block;
+  border: 1px solid #eeeeee;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .product-img {
   max-width: 100%;
