--- a/css/styles.css
+++ b/css/styles.css
@@ -141,18 +141,24 @@ body {
 }
 /* --------------SLOGAN ------------*/
 .slogan {
-  background-color: #2f303a;
+  background-color: #c4c4c4;
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/FonSlogan.jpg);
   padding-top: 200px;
   padding-bottom: 200px;
+  background-repeat: no-repeat;
   /*padding: 200px 455px 210px 455px;*/
 }
 .slogan-text {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-
   letter-spacing: 0.06em;
   text-transform: uppercase;
+  text-align: center;
   color: #ffffff;
   max-width: 626px;
   margin-left: auto;
