--- a/css/styles.css
+++ b/css/styles.css
@@ -386,7 +386,7 @@ body {
   display: flex;
 }
 .footer-left-part {
-  margin-right: 30px;
+  margin-right: 70px;
 }
 .footer-log {
   display: inline-block;
@@ -436,10 +436,10 @@ body {
 }
 .footer-soc {
   max-width: 206px;
+  padding-top: 12px;
 }
 .footer-soc-text {
   font-style: normal;
-  padding-top: 12px;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -472,7 +472,7 @@ body {
 } */
 .footer-soc-link:hover,
 .footer-soc-link:focus {
-  fill: var(--main-accent-color);
+  /* fill: var(--main-accent-color);*/
   background-color: var(--accent-color);
 }
 
@@ -539,7 +539,7 @@ body {
 .product-link:hover,
 .product-link:focus {
   display: inline-block;
-  border: 1px solid #eeeeee;
+  /*border: 1px solid #eeeeee;*/
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
