--- a/css/styles.css
+++ b/css/styles.css
@@ -132,14 +132,19 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--second-text-color);
+  display: flex;
+  align-items: center;
 }
-.heade-link-communication:hover,
-.heade-link-communication:focus {
+.heade-link-communication:hover {
   color: var(--accent-color);
   fill: var(--accent-color);
 }
+.heade-link-communication:focus {
+  color: var(--accent-color);
+}
 .heade-icon {
   margin-right: 10px;
+  fill: currentColor;
   /*outline: 2px solid red;*/
 }
 /* --------------SLOGAN ------------*/
@@ -309,7 +314,7 @@ body {
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: var(--second-text-color);
-  padding-bottom: 16px;
+  margin-bottom: 16px;
 }
 .info-soc {
   display: flex;
@@ -339,7 +344,7 @@ body {
 /* --------------CLIENTS ------------*/
 .clients {
   background: #f5f5f5; /*#f5f5f5;*/
-  padding: 186px 0 94px 0;
+  padding: 94px 0 94px 0;
 }
 
 .clients-title {
@@ -364,14 +369,19 @@ body {
 .clients-link {
   width: 170px;
   height: 92px;
+  border: 1px solid #afb1b8;
 
   display: flex;
   align-items: center;
   justify-content: center;
   fill: #afb1b8;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
 }
-
-.clients-link:hover,
+.clients-link:hover {
+  fill: var(--accent-color);
+  border: 1px solid var(--accent-color);
+}
 .clients-link:focus {
   fill: var(--accent-color);
 }
