--- a/css/styles.css
+++ b/css/styles.css
@@ -343,7 +343,7 @@ body {
 }
 /* --------------CLIENTS ------------*/
 .clients {
-  background: #f5f5f5; /*#f5f5f5;*/
+  background: #ffffff; /*#f5f5f5;*/
   padding: 94px 0 94px 0;
 }
 
@@ -364,7 +364,7 @@ body {
 .clients-item {
   border: 1px solid #afb1b8;
   border-radius: 4px;
-  background: #f5f5f5; /*#f5f5f5;*/
+  /*background: #f5f5f5; #f5f5f5;*/
 }
 .clients-link {
   width: 170px;
