--- a/css/styles.css
+++ b/css/styles.css
@@ -226,7 +226,7 @@ body {
   /*outline: 2px solid rgb(190, 16, 16);*/
   margin-bottom: 30px;
 }
-.feature-icon {
+.feature-icon-svg {
   justify-content: center;
   align-items: center;
 }
