--- a/css/styles.css
+++ b/css/styles.css
@@ -219,6 +219,8 @@ body {
   /* display: block;*/
   /*------------------------*/
   display: flex;
+  justify-content: center;
+  /*align-items: center;*/
   background: #f5f4fa;
   border-radius: 4px;
   width: 270px;
@@ -226,10 +228,7 @@ body {
   /*outline: 2px solid rgb(190, 16, 16);*/
   margin-bottom: 30px;
 }
-.feature-icon-svg {
-  justify-content: center;
-  align-items: center;
-}
+
 .features-title {
   font-weight: 700;
   font-size: 14px;
