--- a/css/styles.css
+++ b/css/styles.css
@@ -220,7 +220,7 @@ body {
   /*------------------------*/
   display: flex;
   justify-content: center;
-  /*align-items: center;*/
+  align-items: center;
   background: #f5f4fa;
   border-radius: 4px;
   width: 270px;
