--- a/css/styles.css
+++ b/css/styles.css
@@ -137,7 +137,7 @@ body {
 }
 .heade-link-communication:hover {
   color: var(--accent-color);
-  fill: var(--accent-color);
+  /*fill: var(--accent-color);*/
 }
 .heade-link-communication:focus {
   color: var(--accent-color);
@@ -382,7 +382,7 @@ body {
 }
 .clients-link:hover {
   fill: var(--accent-color);
-  border: 1px solid var(--accent-color);
+  border: var(--accent-color);
 }
 .clients-link:focus {
   fill: var(--accent-color);
